--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=api-gateway
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+logging.level.root= INFO
+logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator= INFO
+logging.level.org.springframework.cloud.gateway= TRACE
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
@@ -17,7 +21,19 @@ spring.cloud.gateway.routes[2].id=ord
 spring.cloud.gateway.routes[2].uri=lb://inventory-service
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/inventory
 
+## Discover Server Route
+spring.cloud.gateway.routes[3].id=discovery-server
+spring.cloud.gateway.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[3].filters[0]=SetPath=/
+
+## Discover Server Static Resources Route
+spring.cloud.gateway.routes[4].id=discovery-server-static
+spring.cloud.gateway.routes[4].uri=http://localhost:8761
+spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
 
 eureka.instance.instance-id=${spring.application.name}-${random.uuid}
 
 server.port=57958
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/spring-boot-microservices-realm
