--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -6,3 +6,15 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 app.eureka.username=eureka
 app.eureka.password=password
+
+
+
+spring.datasource.url=jdbc:h2:./register
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+
+spring.jpa.hibernate.ddl-auto=update
